app/assets/sass/application.scss
//
// For guidance on how to add CSS and SCSS see:
// https://prototype-kit.service.gov.uk/docs/adding-css-javascript-and-images
// 

.remove-govuk-crown .govuk-header__logo {
    display: none;
}

main.govuk-main-wrapper {
    @include govuk-responsive-padding(6, "top");
}

.dwp-header {
    border-bottom: 10px solid $govuk-brand-colour;
}

.app-big-bar {
    background-color: $govuk-brand-colour;
    height: auto;
    width: 100%;

    .app-big-bar__wrapper {
        @include govuk-responsive-padding(3, "top");
        @include govuk-responsive-padding(3, "bottom");
    }

    h1 {
        @include govuk-responsive-margin(6, "bottom");
    }

    p {
        @include govuk-responsive-margin(4, "bottom");
   }

    h1, p {
        color: govuk-colour("white");
    }
}

#search-wrapper {
    @include govuk-responsive-margin(6, "bottom");
}

.app-card {
    @include govuk-responsive-margin(6, "bottom");
    border: 1px solid $govuk-border-colour;

    h2 {
        @include govuk-responsive-margin(3, "top");  
        @include govuk-responsive-margin(0, "bottom");  
    }

    .app-card-title-wrapper {
        background-color: govuk-colour("light-grey");
        @include govuk-responsive-padding(4, "top");
        @include govuk-responsive-padding(4, "bottom");
        @include govuk-responsive-padding(5, "left");
        @include govuk-responsive-padding(5, "right");  

        .app-card-title-description {
            @include govuk-responsive-margin(2, "bottom");  
            @include govuk-responsive-margin(2, "top");  
        }

        .app-card-title-govuk-links {
            @include govuk-responsive-margin(0, "bottom");  
        }
    }

    .app-card-content {
        @include govuk-responsive-padding(4, "top");
        @include govuk-responsive-padding(6, "bottom");
        @include govuk-responsive-padding(5, "left");
        @include govuk-responsive-padding(5, "right");
    }

    .govuk-button {
        @include govuk-responsive-margin(5, "top");
        @include govuk-responsive-margin(0, "bottom");
    }

    .govuk-table {
        @include govuk-responsive-margin(0, "bottom");

      /*   .govuk-table__row:last-child td {
            border: 0;
        } */
    }

    .govuk-tag {
        max-width: none;
    }
}

.dwp-timeline {
    @include govuk-responsive-margin(8, "top");
    
    .dwp-timeline__events--entry {
        @include govuk-responsive-margin(9, "bottom");

        p {
            @include govuk-responsive-margin(2, "bottom");
        }
        
        .dwp-timeline__events--entry-header {
            > * {
            display: inline-block;
            }

            a {
                @include govuk-responsive-margin(1, "right");
            }

            .govuk-tag {
                @include govuk-responsive-margin(1, "left");
            }
        }
    }
}

.hide {
    display: none;
}

.clear-search-link {
    @include govuk-responsive-margin(2, "left");
}

.app-mainstream-inset {
    border-left: 1px solid $govuk-border-colour;
    padding-left: 15px;
    margin-bottom: 30px;
    margin-top: 30px;
}

.dwp-old-primary-background {
    background-color: #28a197;
}

.pension-credit-calculator {
    .govuk-header__container {
        border-bottom-color: #00beb7;
    }

    .govuk-panel--confirmation {
        @include govuk-responsive-padding(3);
        background-color: #28a197;
        margin-bottom: govuk-spacing(7);
       
        h2 {
            color: govuk-colour("white");
            margin: 0;
        }

        .govuk-panel__title {
            display: none;
        }
    }

    .check-your-answers {
        @media (min-width: 40.0625em) {
            .govuk-summary-list__key {
              width: 70%;
            }

            .govuk-heading-m {
                @include govuk-responsive-margin(3, "top");
                @include govuk-responsive-margin(1, "bottom");
            }
        } 
    }

    .govuk-button {
        background-color: #00823b;
        padding: 14px;
    }

    footer {
        background-color: #dee0e2;
        border-top: 10px solid #00beb7;
    }
}

